b=422661, long table border rendered incompletely (wrong coordinate conditioning in gfxRect), r+sr=roc